<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/privcypolicy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/slogo"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:elevation="10dp"
            android:src="@drawable/ic_icon" />

        <TextView
            android:id="@+id/welcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slogo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:text="Welcome To"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcom"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="All Video Downloader"
            android:textColor="#555454"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/termslasttwo"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/candera"
                android:text="Our "
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/candera"
                android:text="@string/link1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/candera"
                android:text=" and  "
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/candera"
                android:text="@string/link2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/termslasttwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/continueapp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/candera"
            android:lineSpacingExtra="1px"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_install"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/splashview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/candera"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tag_line"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:visibility="gone" />

    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="@color/colorPrimaryDark"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />
</RelativeLayout>

