<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />

            <ImageView
                android:id="@+id/im_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:id="@+id/lnr_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:gravity="top|center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/imWhatsappShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_whatsapp"
                        android:tint="@color/black"
                        app:backgroundTint="@color/white"
                        app:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imWhatsappShare"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/whatsapp"
                        android:textColor="@color/white"
                        android:visibility="visible" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/imShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_share_main"
                        app:backgroundTint="#fff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imShare"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:visibility="visible" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/imDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_delete_black_24dp"
                        android:tint="@color/black"
                        app:backgroundTint="#fff"
                        app:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imDelete"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/delete"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:visibility="visible" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</layout>